plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
//	id 'checkstyle'
//	id 'pmd'
}

group = 'com.time'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("io.jsonwebtoken:jjwt-api:0.12.6")
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	runtimeOnly 'com.h2database:h2' //TODO switch to PostgreSQL later
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
	ignoreFailures = false
}

//checkstyle {
//	toolVersion = '10.23.0'
//	config = resources.text.fromUri('https://raw.githubusercontent.com/checkstyle/checkstyle/master/src/main/resources/google_checks.xml')
//	maxWarnings = 0
//	ignoreFailures = true
//	sourceSets = [sourceSets.main]
//}
//
//checkstyleMain {
//	source = sourceSets.main.java
//	exclude '**/test/**'
//}
//
//pmd {
//	toolVersion = '7.6.0'
//	ignoreFailures = false
//	ruleSetConfig = resources.text.fromString("") //TODO remove
//	ruleSets = [] //TODO remove
//	sourceSets = [sourceSets.main]
//}
//
//pmdMain {
////	source = sourceSets.main.java
//	exclude '**/test/**'
//}
//
//check.dependsOn checkstyleMain, pmdMain, test
//
//test.mustRunAfter checkstyleMain, pmdMain
//
//build.dependsOn check